sections.css
.navigation-bar
{
    margin: 1em;
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    justify-content: flex-end;
}

.header-navigation .icon
{
    color: white;
    display: none;
}

.header-navigation
{
    position: absolute;
    right: 20px;
    top: 5%
}
@media screen and (max-width: 600px)
{
    .header-navigation a
    {
        display: none;
    }
    .header-navigation a.icon
    {
        float: right;
        display: block;
    }
}
@media screen and (max-width: 600px)
{
    .header-navigation.responsive
    {
        position: relative;
    }
    .header-navigation.responsive .icon
    {
        position: absolute;
        right: 0;
        top: 0;
    }
    .header-navigation.responsive a
    {
        float: none;
        display: block;
        text-align: left;
        margin-left: 50px;
    }
}

.hero-image
{
    overflow: hidden;
    min-height: 650px;
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn-images-1.medium.com/max/2600/1*VibJsLuJ_WJFRn45mCwytA.jpeg");
  
    /* Set a specific height */
    height: 70%;
    /*min-height: 320px;*/

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

/* Place text in the middle of the image */
.hero-text
{
    
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
}


.gray
{
    min-height: 400px;
    background-color: rgb(230, 230, 230);
    background-position: center;
    background-size: cover;
    color: black;
    position: relative;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);

    /* Set a specific height */

    height: 40%;

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    overflow: hidden;
}

.gray h2
{
    font-size: 50px;
    font-family: 'Playfair Display', sans-serif;
    font-weight: lighter;
}
.gray p
{
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 25px;
    font-weight: lighter;
}
.gray-text
{
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
}

.white
{
    min-height: 400px;
    
    background-color: rgb(255, 255, 255);


    background-position: center;
    background-size: cover;

    color: black;

    position: relative;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);

    /* Set a specific height */

    height: 40%;

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    overflow: hidden;
    margin: 0px;
}

.white h2
{
    font-size: 50px;
    font-family: 'Playfair Display', sans-serif;
    font-weight: lighter;
}
.white p
{
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 25px;
    font-weight: lighter;
}
.white-text
{
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
}

#about-me
{
    min-height: 600px;
    height: 50%;
    margin-top: 100px;
}

#webdev
{
    min-height: 500px;
    margin-bottom: 50px;
}

